css/main.css
/* ... */
.confirm-radio input+label {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    border-radius: 8px;
    cursor: pointer;
    border: 1px solid #f1f1f1
}

.confirm-radio input:checked+label {
    background: url(../img/elements/success-radio.png) no-repeat center center/cover;
    border: none
}

.disabled-radio {
    width: 16px;
    height: 16px;
    border-radius: 8px;
    background: #fff;
    position: relative;
    cursor: pointer
}

.disabled-radio input {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    opacity: 0
}

.disabled-radio input+label {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    border-radius: 8px;
    cursor: pointer;
    border: 1px solid #f1f1f1
}

.disabled-radio input:disabled {
    cursor: not-allowed;
    z-index: 3
}

.disabled-radio input:checked+label {
    background: url(../img/elements/disabled-radio.png) no-repeat center center/cover;
    border: none
}

.default-select {
    height: 40px
}

.default-select .nice-select {
    border: none;
    border-radius: 0px;
    height: 40px;
    background: #fff;
    padding-left: 20px;
    padding-right: 40px
}

.default-select .nice-select .list {
    margin-top: 0;
    border: none;
    border-radius: 0px;
    box-shadow: none;
    width: 100%;
    padding: 10px 0 10px 0px
}

.default-select .nice-select .list .option {
    font-weight: 300;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
    line-height: 28px;
    min-height: 28px;
    font-size: 12px;
    padding-left: 20px
}

.default-select .nice-select .list .option.selected {
    color: #f7631b;
    background: transparent
}

.default-select .nice-select .list .option:hover {
    color: #f7631b;
    background: transparent
}

.default-select .current {
    margin-right: 50px;
    font-weight: 300
}

.default-select .nice-select::after {
    right: 20px
}

@media (max-width: 991px) {
    .left-align-p p {
        margin-top: 20px
    }
}

.form-select {
    height: 40px;
    width: 100%
}

.form-select .nice-select {
    border: none;
    border-radius: 0px;
    height: 40px;
    background: #fff !important;
    padding-left: 45px;
    padding-right: 40px;
    width: 100%
}

.form-select .nice-select .list {
    margin-top: 0;
    border: none;
    border-radius: 0px;
    box-shadow: none;
    width: 100%;
    padding: 10px 0 10px 0px
}

.form-select .nice-select .list .option {
    font-weight: 300;
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s;
    line-height: 28px;
    min-height: 28px;
    font-size: 12px;
    padding-left: 45px
}

.form-select .nice-select .list .option.selected {
    color: #f7631b;
    background: transparent
}

.form-select .nice-select .list .option:hover {
    color: #f7631b;
    background: transparent
}

.form-select .current {
    margin-right: 50px;
    font-weight: 300
}

.form-select .nice-select::after {
    right: 20px
}

.header-top {
    background: #192f74;
    font-size: 12px;
    padding: 8px;
}

a.top-nav-link {
    font-size: 17px;
    font-weight: 600;
    font-variant: all-small-caps;
    /* margin-right: 5%; */
}

.header-top a {
    color: #fff
}

.header-top ul li {
    display: inline-block;
    margin-left: 15px
}

.header-top .header-top-left {
    text-align: left
}

.header-top .header-top-left i {
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s
}

.header-top .header-top-left a {
    margin-right: 10px
}

.header-top .header-top-left a:hover {
    -webkit-transition: all 0.3s ease 0s;
    -moz-transition: all 0.3s ease 0s;
    -o-transition: all 0.3s ease 0s;
    transition: all 0.3s ease 0s
}

.header-top .header-top-left a:hover i {
    color: #f7631b
}

.header-top .header-top-right {
    text-align: right
}

.header-top .header-top-right a {
    margin-right: 10px
}

.header-top .header-top-right a .lnr {
    display: none;
    font-weight: 700
}

@media (max-width: 480px) {
    .header-top .header-top-right a .lnr {
        display: inline-block
    }
    .header-top .header-top-right a .text {
        display: none
    }
}

@media (max-width:850px){
    .more-top-nav{
        display: block !important;
    }
    .top-nav-ul{
        display: none;
    }
    .top-nav-ul li {
        display: block !important;
    }
    div#events{
        width:96% !important;
    }
}

.top-head-btn {
    background: #f7631b;
    padding: 9px 26px
}

.main-menu {
    padding-bottom: 20px;
    padding-top: 20px;
}

#header {
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    transition: all 0.5s;
    z-index: 997
}

#header.header-scrolled {
    transition: all 0.5s;
    background-color: #fffffff5;
}

#header.header-scrolled .main-menu {
    border-color: transparent
}

@media (max-width: 673px) {
    #logo {
        margin-left: 20px
    }
}

#header #logo h1 {
    font-size: 34px;
    margin: 0;
    padding: 0;
    line-height: 1;
    font-weight: 700;
    letter-spacing: 3px
}

#header #logo h1 a,
#header #logo h1 a:hover {
    color: #000;
    padding-left: 10px;
    border-left: 4px solid #f7631b
}

#header #logo img {
    padding: 0;
    margin: 0
}

@media (max-width: 768px) {
    #header #logo h1 {
        font-size: 28px
    }
    #header #logo img {
        max-height: 40px
    }
}

.nav-menu,
.nav-menu * {
    margin: 0;
    padding: 0;
    list-style: none
}

.nav-menu ul {
    position: absolute;
    display: none;
    top: 100%;
    right: 0;
    z-index: 99
}

.nav-menu li {
    position: relative;
    white-space: nowrap
}

.nav-menu>li {
    float: left
}
/* ... */

